--- a/.github/workflows/terraform-gke.yml
+++ b/.github/workflows/terraform-gke.yml
@@ -11,8 +11,6 @@ jobs:
   plan:
     name: Terraform Plan
     runs-on: ubuntu-latest
-    outputs:
-      plan-exists: ${{ steps.plan.outcome == 'success' }}
 
     env:
       GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/gcp-sa-key.json
@@ -36,7 +34,7 @@ jobs:
         run: terraform plan -var="gcp_sa_key_path=gcp-sa-key.json" -out=tfplan
 
       - name: Upload Plan File
-        if: steps.plan.outcome == 'success'
+        if: success()
         uses: actions/upload-artifact@v4
         with:
           name: tfplan
