--- a/.github/workflows/terraform-gke.yml
+++ b/.github/workflows/terraform-gke.yml
@@ -70,3 +70,5 @@ jobs:
 
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/gcp-sa-key.json
